5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1838_1276.log
== TEST (2019-06-26 11:02:48) 
-- CODE:
from numpy import*
m=array (eval(input())), dtype
v=zeros(7,dtype = int)
for j in range(7):
	v[j] = sum(m[:,j])

for j in range(7):
	if (max(v)== sum(m:,:)):
		print(j +1)
-- ERROR:
File "XXXX", line 8
    if (max(v)== sum(m:,:)):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:03:29) 
-- CODE:
from numpy import*
m=array (eval(input())), dtype
v=zeros(7,dtype = int)

for j in range(7, dtype):
	v[j] = sum(m[:,j])

for j in range(7):
	if (max(v)== sum(m:,:)):
		print(j +1)
-- ERROR:
File "XXXX", line 9
    if (max(v)== sum(m:,:)):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:03:45) 
-- CODE:
from numpy import*
m=array (eval(input())), dtype
v=zeros(7,dtype = int)

for j in range(7, dtype):
	v[j] = sum(m[:,j])

for j in range(7):
	if (max(v)== sum(:,j)):
		print(j +1)
-- ERROR:
File "XXXX", line 9
    if (max(v)== sum(:,j)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:04:19) 
-- CODE:
from numpy import*
m=array (eval(input())), dtype
v=zeros(7,dtype = int)

for j in range(7, dtype):
	v[j] = sum(m[:,j])

for j in range(7):
	if (max(v)== sum(m[:,j])):
		print(j +1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:04:54) 
-- CODE:
from numpy import*
m=array (eval(input()), dtype = int)
v=zeros(7,dtype = int)

for j in range(7, dtype):
	v[j] = sum(m[:,j])

for j in range(7):
	if (max(v)== sum(m[:,j])):
		print(j +1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:05:58) 
-- CODE:
from numpy import*
m=array (eval(input()), dtype = int)
v=zeros(7,dtype = int)

for j in range(7):
	v[j] = sum(m[:,j])

for j in range(7):
	if (max(v)== sum(m[:,j])):
		print(j +1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 11:06:07) 
-- CODE:
from numpy import*
m=array (eval(input()), dtype = int)
v=zeros(7,dtype = int)

for j in range(7):
	v[j] = sum(m[:,j])

for j in range(7):
	if (max(v)== sum(m[:,j])):
		print(j +1)
-- EXECUTION TIME:
1.17897
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
